# zxcvbn-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
ci/: before_deploy.sh
src/: .main.rs.swp  lib.rs  main.rs  matching.rs  result.rs  scoring.rs
tests/: build_script_test.rs
